# modrin

./: CMakeLists.txt  LICENSE  README.md  modrin_motor_plugins.xml  package.xml
config/: epos2_tank_volksbot_r4.yaml
include/modrin/: modrin_core.hpp  motor.hpp
include/modrin_motor_plugins/: epos2.hpp
include/modrin_safety_node/: safety.hpp
include/modrin_sample_moving/: sample_moving.hpp
launch/: epos2_init_robot.launch  epos2_init_robot.launch.save  epos2_start_remote.launch  epos_hardware_test.launch  start_volksbot_r4.launch
src/: Epos2MotorController.cpp  SampleMoving.cpp  TankSteering.cpp  TankSteering.h  epos2_driver.cpp  epos2_stateOutput.cpp  fake_joint_states.cpp  main.cpp  modrin_core.cpp  motor.cpp
src/modrin_motor_plugins/: epos2.cpp
src/modrin_safety_node/: main.cpp  safety.cpp
src/modrin_sample_moving/: main.cpp  sample_moving.cpp
srv/: epos2_can.srv
